# ai

prolog/: equation.pl
resolver/: resolver.cabal
resolver/src/: Main.hs
resolver/src/Resolver/: Parser.hs  Printer.hs  Resolver.hs
