name:                resolver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/angel-manuel/resolver#readme
license:             BSD3
license-file:        LICENSE
author:              Ãngel Manuel Martin Canto
maintainer:          angel_manuel_martin@yahoo.es
copyright:           All Rights Reserved
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable resolver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , parsec
                       , haskeline
  other-modules:       Resolver.Parser
                       , Resolver.Printer
                       , Resolver.Resolver
